<resources>
    <string name="app_name">Dto. de Mantenimiento</string>
    <string name="type">Tipo</string>
    <string name="date">Fecha</string>
    <string name="state">Estado</string>
    <string name="finished_work">Trabajos Finalizados</string>
    <string name="submenu_daily_work">Trabajos Diarios</string>
    <string name="new_daily_task">Ingresar Nuevo Trabajo Diario</string>
    <string name="new_monthly_task">Ingresar Nuevo Trabajo Mensual</string>
    <string name="submenu_monthly_work">Trabajos Mensuales</string>
    <string name="submenu_daily_work_finished">Trabajos Diarios Finalizados</string>
    <string name="submenu_monthly_work_finished">Trabajos Mensuales Finalizados</string>
    <string name="Tipo">Tipo</string>
    <string name="Ubicacion">Ubicación</string>
    <string name="Atencion">Atención</string>
    <string name="Piso">Piso</string>
    <string name="Area">Area</string>
    <string name="Subarea">Subarea</string>
    <string name="Subtipo">Subtipo</string>
    <string name="Solicitante">Solicitante</string>
    <string name="Trabajo">Trabajo solicitado</string>

    <string-array name="tipo">
        <item>Eléctrico</item>
        <item>Electrónico</item>
        <item>Climatización</item>
        <item>Gasfitería</item>
        <item>Albañilería</item>
        <item>Cerrajería</item>
        <item>Mecánico</item>
        <item>Pintura</item>
        <item>Aluminio</item>
        <item>Vidrio</item>
        <item>Varios</item>
    </string-array>
    <string-array name="subtipo">
        <item>Instalación</item>
        <item>Cambio</item>
        <item>Fabricación</item>
        <item>Reparación</item>
        <item>Revisión</item>
        <item>Intercambio</item>
    </string-array>
    <string-array name="ubicacion">
        <item>HCSF</item>
        <item>TP</item>
        <item>MGK</item>
        <item>MGD</item>
        <item>MGV</item>
    </string-array>
    <string-array name="atencion">
        <item>Baja</item>
        <item>Alta</item>
    </string-array>
    <string-array name="piso">
        <item>Sótano</item>
        <item>Planta Baja</item>
        <item>Piso 1</item>
        <item>Piso 2</item>
        <item>Piso 3</item>
        <item>Piso 4</item>
        <item>Piso 5</item>
        <item>Piso 6</item>
        <item>Piso 7</item>
        <item>Terraza</item>
    </string-array>
    <string name="eliminar_tarea">Eliminar tarea</string>
    <string name="cambiar_estado_iniciar">Iniciar tarea</string>
    <string name="cambiar_estado_finalizar">Finalizar tarea</string>
    <string name="cambiar_estado_pausado">Pausar tarea</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="operativo">Operativo</string>
    <string name="de_baja">De baja</string>
    <string name="fecha_inicio">Fecha de inicio</string>
    <string name="fecha_finalizacion">Fecha de finalización</string>
    <string name="nota">Nota</string>
</resources>
