<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".Activities.Trabajos_Diarios">

    <include
        android:id="@+id/my_toolbar_trabajos_diarios"
        layout="@layout/actionbar"></include>

    <TextView
        android:id="@+id/textViewDailyWork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_toolbar_trabajos_diarios"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/submenu_daily_work"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayoutDailyTaskFinished"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewDailyWork">

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.16"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/date"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/type"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewSubtipo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.16"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/Subtipo"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewEstado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.16"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/state"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewPiso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.16"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/Piso"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewArea"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.16"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/Area"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewSubarea"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.16"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/Subarea"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewUbicacion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.16"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/Ubicacion"
            android:textSize="18sp" />
    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh_tareas_diarias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutDailyTaskFinished">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewDailyTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutDailyTaskFinished">


        </android.support.v7.widget.RecyclerView>
    </android.support.v4.widget.SwipeRefreshLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        app:maxImageSize="35dp"
        app:srcCompat="@drawable/icon_add_task" />

</RelativeLayout>