<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Trabajos_Diarios_Finalizados">

    <TextView
        android:id="@+id/textViewWorkFinished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/submenu_daily_work_finished"
        android:padding="5dp"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:id="@+id/linearLayoutMonthlyTaskFinished3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewWorkFinished">

        <TextView
            android:id="@+id/textViewTypeFinished"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/type"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewDateStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/fecha_inicio"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewDateFinished"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/fecha_finalizacion"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewDailyTaskFinished"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutMonthlyTaskFinished3">

    </android.support.v7.widget.RecyclerView>
</RelativeLayout>