<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Administrador_busqueda">

    <include
        android:id="@+id/my_toolbar_administrador_busqueda"
        layout="@layout/actionbar"></include>
    <TextView
        android:layout_below="@id/my_toolbar_administrador_busqueda"
        android:id="@+id/textViewDailyWork3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/submenu_daily_work"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayoutMonthlyTaskFinished3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewDailyWork3">

        <TextView
            android:id="@+id/textViewTypeSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/type"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewDateSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.30"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/date"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewStateSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/state"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewDailyTask3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutMonthlyTaskFinished3">

    </android.support.v7.widget.RecyclerView>
</RelativeLayout>