<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.Detalle_tareas">
    <include
        android:id="@+id/my_toolbar_detalle_tareas"
        layout="@layout/actionbar">
    </include>

    <TextView
        android:layout_below="@id/my_toolbar_detalle_tareas"
        android:id="@+id/textViewDailyWork2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/submenu_daily_work"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewDetalleTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewDailyWork2"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/Tipo"
        android:textSize="18sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textViewDetalleTipo">
        <ScrollView
            android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:text="@string/Ubicacion"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/textViewDetalleUbicacion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="0.7"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:text="@string/Piso"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/textViewDetallePiso"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="0.7"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:text="@string/Area"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/textViewDetalleArea"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="0.7"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:text="@string/Subarea"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/textViewDetalleSubarea"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="0.7"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:text="@string/Solicitante"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/textViewDetalleSolicitante"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="0.7"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewDetalleTrabajoSolicitado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textSize="18sp" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewNota"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:focusable="true"
                android:clickable="true"
                android:orientation="vertical"
                app:cardCornerRadius="18dp"
                app:cardElevation="3dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <EditText
                        android:id="@+id/editTextNota"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ems="10"
                        android:hint="@string/nota"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:maxLength="70"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="Autofill" />
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/buttonFinalizarTarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="17dp"
                app:cardElevation="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:text="@string/cambiar_estado_finalizar"
                    android:textColor="@color/text_button_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
    </LinearLayout>
</RelativeLayout>
